[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/Selling/VBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://Game/Selling/Selling.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sound/SoundEffects/coin.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/SoundEffects/coin2.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[node name="Selling" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -199.0
custom_fonts/font = SubResource( 1 )
text = "Click on the fish you wish to sell"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
margin_bottom = -179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldAmount" type="Label" parent="HBoxContainer"]
margin_right = 144.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Gold: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishesCaught" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 83.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsForFishesCaught" type="VBoxContainer" parent="FishesCaught"]
margin_right = 144.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="GoBackToVendorButton" type="Button" parent="."]
margin_left = 7.431
margin_top = 226.108
margin_right = 150.431
margin_bottom = 253.108
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = SubResource( 3 )
text = "Go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="CoinSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="pressed" from="GoBackToVendorButton" to="." method="_on_GoBackToMenuButton_pressed"]
